# databases

./: .env  .gitignore  README.md  commands.py  demo.py  pyproject.toml  pytest.ini  run_tests.py
databases/: c_db_merge.py  db_merge.py  db_mgmt.py  db_models.py  db_settings.py  db_stats.py  db_utils.py  external.py  meta_database.py  migration.py  model_conversion.py  platform_db_mgmt.py
databases/extra/: fix_mixed_db.py
docs/claude/: create_docs.md
src/big5_databases/: commands.py
src/big5_databases/databases/: c_db_merge.py  db_analytics.py  db_fixes.py  db_merge.py  db_mgmt.py  db_models.py  db_operations.py  db_session.py  db_settings.py  db_stats.py  db_utils.py  external.py  fix_remove_main_table.py  meta_database.py  model_conversion.py  platform_db_mgmt.py  post_analysis_db.py  settings.py  time_sorted.py  vector_db.py
src/big5_databases/databases/extra/: fix_mixed_db.py  update_july25_version.py
test/: README.md  conftest.py  test_commands.py  test_db_mgmt.py
