[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[project]
name = "big5-databases"
version = "0.7.1"
description = "database management for big5"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-project-tools[database,excel]",
    "deprecated>=1.2.18",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "tqdm>=4.67.1",
    "deepdiff>=8.6.0",
]


[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
vector = [
    "lancedb>=0.23.0",
]
commands = [
    "typer>=0.16.0",
]
dev = [
    "pytest>=8.4.1",
    "commitizen>=4.9.1",
]

datasets = [
    "torch>=2.8.0",
]

[tool.uv.sources]
python-project-tools = { git = "https://github.com/transfluxus/python-project-tools" }

# USE WITH: uv run cz commit
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$major.$minor.$patch"
version_files = [
    "pyproject.toml:version"
]
# Add this line to auto-stage files
update_changelog_on_bump = true